--- a/app/globals.css
+++ b/app/globals.css
@@ -8,10 +8,12 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
+    --global-bg: 255,255,255;
   }
 }
 
 body {
   color: rgb(var(--foreground-rgb));
+  background: rgb(var(--global-bg));
 }
